# owl-ms-language-server

./: .envrc  .gitignore  .gitmodules  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.rs  flake.nix  readme.md  release-please-config.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: user-story.md
.github/workflows/: cd.yml  ci.yml  main.yml  release-please.yml
benches/: my_benchmark.rs
crates/owl-ms-language-server/: Cargo.toml  README.md  capabilities.md
crates/owl-ms-language-server/benches/: my_benchmark.rs  parse.rs  requests.rs
crates/owl-ms-language-server/examples/: annotation_property.omn  quick.omn
crates/owl-ms-language-server/proptest-regressions/: tests.txt
crates/owl-ms-language-server/src/: catalog.rs  consts.rs  debugging.rs  error.rs  lib.rs  main.rs  pos.rs  position.rs  queries.rs  range.rs  rope_provider.rs  sync_backend.rs  test_helpers.rs  tests.rs  web.rs  workspace.rs
crates/tree-sitter-owl-ms/: Cargo.toml  README.md  grammar.js  package-lock.json  package.json  tree-sitter.json
crates/tree-sitter-owl-ms/bindings/rust/: build.rs  lib.rs
crates/tree-sitter-owl-ms/queries/: folds.scm  highlights.scm  indents.scm
crates/tree-sitter-owl-ms/src/: grammar.json  node-types.json  parser.c  scanner.c
crates/tree-sitter-owl-ms/test/corpus/: statements.txt
demo-ontologies/: complex.omn  formatting.omn  pizza.omn  small.omn
demo-ontologies/ab/: a.omn  b.omn  catalog-v001.xml
demo-ontologies/iri-types/: main.omn
demo-ontologies/multi-file/: catalog-v001.xml  main.omn  other-2.omn  other-func.ofn  other.omn
demo-ontologies/protege/: catalog-v001.xml  main.omn  main.owx  other.omn  other.owx
demo-ontologies/with-external/: catalog-v001.xml  main.omn
editors/code/: README.md  language-configuration.json  package-lock.json  package.json
editors/code/client/: package-lock.json  package.json  tsconfig.tsbuildinfo
editors/code/client/src/: extension.ts
editors/code/client/src/test/: index.ts  runTest.ts  smoke.test.ts
editors/code/client/test/: helper.ts  smoke.test.ts
editors/code/client/testFixture/: o.omn
examples/: annotation_property.omn  minimal.omn  pizza.omn
lib/owl-ms-language-server/: Cargo.toml
lib/owl-ms-language-server/examples/: minimal.omn
lib/owl-ms-language-server/src/: range.rs
src/: main.rs  position.rs  rope_provider.rs  tests.rs
