[package]
name = "owl-ms-language-server"
description = "An incremental analysis assistant for writing ontologies with the OWL Manchester Syntax"
readme = "README.md"
keywords = ["owl", "manchester-syntax"]

edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
dashmap = "5.5.3"
itertools = "0.14.0"
log = "0.4.20"
once_cell = "1.18.0"
quick-xml = { version = "0.37.4", features = ["serialize"] }
ropey = "1.6.1"
serde = { version = "1.0.196", features = ["derive", "serde_derive"] }
serde_json = "1.0.113"
simple-logging = "2.0.2"
tempdir = "0.3.7"
test-log = "0.2.17"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "io-util", "io-std", "sync"] }
tower-lsp = "0.20.0"
tree-sitter = "0.20.10"
tree-sitter-owl-ms.workspace = true
ureq = "3.0.10"
walkdir = "2.5.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[build-dependencies]
cc = "1.0"

[[bench]]
name = "my_benchmark"
harness = false

