[package]
name = "owl-ms-language-server"
description = "An incremental analysis assistant for writing ontologies with the OWL Manchester Syntax"
readme = "README.md"
keywords = ["owl", "manchester-syntax"]

edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0"
cached = "0.55"
clap = { version = "4.5", features = ["derive"] }
dashmap = "5.5"
horned-owl = "1"
itertools = "0.14"
log = "0.4"
once_cell = "1.18"
oxiri = "0.2"
parking_lot = { version = "0.12", features = ["send_guard"] }
quick-xml = { version = "0.37", features = ["serialize"] }
ropey = "1.6"
serde = { version = "1.0", features = ["derive", "serde_derive"] }
serde_json = "1.0"
simple-logging = "2.0"
tempdir = "0.3"
test-log = "0.2"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "io-util", "io-std", "sync"] }
tower-lsp = "0.20"
tree-sitter = "0.20"
tree-sitter-owl-ms.workspace = true
ureq = "3.0"
walkdir = "2.5"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
indoc = "2"
pretty_assertions = "1"

[build-dependencies]
cc = "1.0"

[[bench]]
name = "my_benchmark"
harness = false

