[package]
name = "tree-sitter-owl-ms"
description = "owl-ms grammar for the tree-sitter parsing library"
readme = "README.md"
keywords = ["incremental", "parsing", "owl-ms"]
categories = ["parsing", "text-editors"]

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "1.0"
