[package]
name = "tree-sitter-owl-ms"
description = "owl-ms grammar for the tree-sitter parsing library"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "owl-ms"]
categories = ["parser-implementations", "parsing", "text-editors"]
autoexamples = false

edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25"
